added rough venus, mars planet photo (to be changed) and changed the conig file to use an enum.